--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-black ph3 pv4 white">
-
+<!--
 	<div class="mw7 center pt3">
 
 		<div class="measure-narrow center mb4">
@@ -44,13 +44,13 @@
 			</div>
 
 		</div>
-	</div>
+	</div> -->
 
 </footer>
 
-{{ partial "svg" . }}
+<!-- {{ partial "svg" . }}
 
-<script src="/app.js"></script>
+<script src="/app.js"></script> -->
 
 </body>
 
