--- a/site/layouts/partials/blog.html
+++ b/site/layouts/partials/blog.html
@@ -1,3 +1,33 @@
+<div class="wrapper animsition">
+    <div id="sus-content" class="header">
+        <img src="/images/icon_menu.png" alt="">
+         <h1 class="home_logo">
+            <img src="/img/logo_txt_0306.png">
+        </h1>
+        <button type="button" class="new-btn-aft trigger-show-progress">ログイン</button>
+    </div>
+
+    <div style="margin-top:50px"></div>
+
+      <div id="sus-content">
+        <div class="sus-card sus-margin-top-xl sus-margin-xs">
+          <div class="">
+            <a href="http://sustina.local/news/20180427">
+                <div class="sus-text-black sus-text-sm sus-padding-sm clearfix ">
+                    <div class="sus-float-left">
+                      2018.04.27<br/>
+                      アイテム購入機能とGW営業日のご案内
+                    </div>
+                    <div class="sus-float-right">
+                      <img class="sus-image-inline-block sus-padding-top-sm" src="/img/icon_next.png" alt="icon_next.png" height="25px">
+                    </div>
+                </div>
+            </a>
+        </div>
+      </div>
+     </div>
+</div>
+
 <div class="bg-off-white pv4">
 	<div class="ph3 mw7 center">
 
@@ -11,9 +41,9 @@
 			{{ end }}
 		</div>
 
-		<div class="tc">
+		<!-- <div class="tc">
 			<a href="/post" class="btn raise">Read more</a>
-		</div>
+		</div> -->
 
 	</div>
 </div>
