--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -1,27 +1,35 @@
 <head>
 
-	<title>{{ .Title }} | Kaldi</title>
-	<link rel="stylesheet" href="/css/main.css" />
+	<title>{{ .Title }} | SUSTINA</title>
+	<!-- <link rel="stylesheet" href="/css/main.css" /> -->
+	<!-- Style sheets -->
+	<link type="text/css" rel="stylesheet" href="/css/jquery.glide.css" />
+	<link type="text/css" rel="stylesheet" href="/css/badger.css"  />
+	<link type="text/css" rel="stylesheet" href="/css/sweetalert2.min.css" />
+	<link type="text/css" rel="stylesheet" href="/css/sustina.css" />
+	<link type="text/css" rel="stylesheet" href="/css/animsition.min.css">
+	<link type="text/css" rel="stylesheet" href="/css/jquery.modal.min.css" media="screen" />
+	<link type="text/css" rel="stylesheet" href="/css/app.css" />
 
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet"> -->
 
 	<!-- Favicons -->
-	<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+	<!-- <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
 	<link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
 	<link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
 	<link rel="manifest" href="/manifest.json">
 	<link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#ff4400">
-	<meta name="theme-color" content="#fff">
+	<meta name="theme-color" content="#fff"> -->
 
 	<!-- Open Graph -->
-	<meta property="og:type" content="business.business">
+	<!-- <meta property="og:type" content="business.business">
 	<meta property="og:title" content="Kaldi | Great coffee with a conscience">
 	<meta property="og:url" content="/">
-	<meta property="og:image" content="/img/og-image.jpg">
+	<meta property="og:image" content="/img/og-image.jpg"> -->
 
 	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
