--- a/site/layouts/partials/blog.html
+++ b/site/layouts/partials/blog.html
@@ -31,12 +31,14 @@
 <div class="bg-off-white pv4">
 	<div class="ph3 mw7 center">
 
-		<h2 class="f2 b lh-title mb3">Latest stories</h1>
-
 		<div class="w-100 flex-ns mhn1-ns flex-wrap mb3">
-			{{ range first 4 (where .Data.Pages "Type" "post") }}
+            {{ range (where .Data.Pages "Type" "post").Reverse }}
 				<div class="ph1-ns w-50-ns flex">
-					{{ .Render "li" }}
+                    <a href="{{ .Permalink }}" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
+                    	<h2 class="f3 b lh-title mb1 primary">{{ .Title }}</h2>
+                    	<p class="mid-gray lh-title mb2">{{ .Date.Format "Mon, Jan 2, 2006" }}</p>
+                    </a>
+					<!-- {{ .Render "li" }} -->
 				</div>
 			{{ end }}
 		</div>
