--- a/site/layouts/partials/blog.html
+++ b/site/layouts/partials/blog.html
@@ -1,6 +1,6 @@
 <div class="wrapper animsition">
     <div id="sus-content" class="header">
-        <img src="/images/icon_menu.png" alt="">
+        <img src="/img/icon_menu.png" alt="">
          <h1 class="home_logo">
             <img src="/img/logo_txt_0306.png">
         </h1>
