--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   {{ partial "head" . }}
-  <body class="sans-serif">
-    {{ partial "nav" . }}
-    {{ block "main" . }}{{ end }} 
-    {{ partial "footer" . }} 
+  <body>
+    <!-- {{ partial "nav" . }} -->
+    {{ block "main" . }}{{ end }}
+    <!-- {{ partial "footer" . }} -->
   </body>
 </html>
