--- a/site/layouts/partials/blog.html
+++ b/site/layouts/partials/blog.html
@@ -1,5 +1,5 @@
 <div class="wrapper animsition">
-    <div id="sus-content" class="header">
+    <!-- <div id="sus-content" class="header">
         <img src="/img/icon_menu.png" alt="">
          <h1 class="home_logo">
             <img src="/img/logo_txt_0306.png">
@@ -7,16 +7,17 @@
         <button type="button" class="new-btn-aft trigger-show-progress">ログイン</button>
     </div>
 
-    <div style="margin-top:50px"></div>
+    <div style="margin-top:50px"></div> -->
 
       <div id="sus-content">
         <div class="sus-card sus-margin-top-xl sus-margin-xs">
+        {{ range (where .Data.Pages "Type" "post").Reverse }}
           <div class="">
             <a href="http://sustina.local/news/20180427">
                 <div class="sus-text-black sus-text-sm sus-padding-sm clearfix ">
                     <div class="sus-float-left">
-                      2018.04.27<br/>
-                      アイテム購入機能とGW営業日のご案内
+                      {{ .Date.Format "2006.01.02" }}<br/>
+                      {{ .Title }}
                     </div>
                     <div class="sus-float-right">
                       <img class="sus-image-inline-block sus-padding-top-sm" src="/img/icon_next.png" alt="icon_next.png" height="25px">
@@ -24,28 +25,7 @@
                 </div>
             </a>
         </div>
+        {{ end }}
       </div>
      </div>
-</div>
-
-<div class="bg-off-white pv4">
-	<div class="ph3 mw7 center">
-
-		<div class="w-100 flex-ns mhn1-ns flex-wrap mb3">
-            {{ range (where .Data.Pages "Type" "post").Reverse }}
-				<div class="ph1-ns w-50-ns flex">
-                    <a href="{{ .Permalink }}" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
-                    	<h2 class="f3 b lh-title mb1 primary">{{ .Title }}</h2>
-                    	<p class="mid-gray lh-title mb2">{{ .Date.Format "Mon, Jan 2, 2006" }}</p>
-                    </a>
-					<!-- {{ .Render "li" }} -->
-				</div>
-			{{ end }}
-		</div>
-
-		<!-- <div class="tc">
-			<a href="/post" class="btn raise">Read more</a>
-		</div> -->
-
-	</div>
 </div>
