--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -1,6 +1,6 @@
 <head>
 
-	<title>{{ .Title }} | SUSTINA</title>
+	<title>SUSTINA</title>
 	<!-- <link rel="stylesheet" href="/css/main.css" /> -->
 	<!-- Style sheets -->
 	<link type="text/css" rel="stylesheet" href="/css/jquery.glide.css" />
@@ -12,8 +12,8 @@
 	<link type="text/css" rel="stylesheet" href="/css/app.css" />
 
 	<meta charset="utf-8">
-	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width initial-scale=1 minimum-scale=1 maximum-scale=1 user-scalable=no shrink-to-fit=no" />
+    <meta name="format-detection" content="telephone=no">
 
 	<!-- <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet"> -->
 
